[package]
name = "http-type"
version = "5.4.0"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A comprehensive Rust library providing essential types for HTTP operations. Includes core HTTP abstractions (request/response, methods, status codes, versions), content types, cookies, WebSocket support, and thread-safe concurrent types (ArcMutex, ArcRwLock). Also provides convenient Option-wrapped primitive types for flexible HTTP handling."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/crates-dev/http-type.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
hex = "0.4.3"
http-constant = "1.63.0"
lombok-macros = "1.13.11"
serde = "1.0.221"
serde_json = "1.0.144"
serde-xml-rs = "0.8.1"
serde_urlencoded = "0.7.1"
url = "2.5.7"
tokio = { version = "1.47.1", features = ["full"] }
http-compress = "2.16.7"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
